Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove dependency on File::HomeDir (gh#7)
  - Fix tests on Windows (gh#5, gh#7)

0.05      2021-07-01 14:29:45 -0600
  - Added Changes file for future changes
  - New maintainer

0.04_001       2014-10-08
  - Removed retroactively experimental Perl features
    to avoid warnings (rt#100798)